# karve

./: .gitignore  .mcp.json  README.md  config.yml  config.yml.dist  credentials.yml.dist  dashboard.html  main.py  pyproject.toml
.claude-plugin/: plugin.json
scripts/: start_openviking.sh  stop_openviking.sh
src/: __init__.py  openviking_mcp_server.py
tests/: conftest.py  test_main.py  test_openviking_mcp_server.py
