[project]
name = "karve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "mlx-embeddings>=0.0.5",
    "mlx-openai-server>=1.1.2",
    "openviking>=0.1.17",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.9",
    "mypy>=1.15",
    "radon>=6.0",
    "bandit[toml]>=1.8",
    "interrogate>=1.7",
    "pylint>=3.3",
    "xenon>=0.9",
    "deptry>=0.23",
    "pip-audit>=2.8",
    "types-PyYAML>=6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "A", "PT"]
ignore = ["A002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.bandit]
targets = ["src"]
skips = ["B108"]

[tool.deptry]
per_rule_ignores = { DEP002 = [
    # MLX packages: runtime deps of openviking stack, not directly imported
    "mlx-embeddings",
    "mlx-openai-server",
    # Dev-only CLI tools in optional-dependencies: not imported in source
    "pytest", "pytest-cov", "pytest-mock",
    "ruff", "mypy", "radon", "bandit", "interrogate",
    "pylint", "xenon", "deptry", "pip-audit",
    "types-PyYAML", "httpx",
] }

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
fail-under = 100
verbose = 1

[dependency-groups]
dev = [
    "pillow>=12.1.1",
]
